@@ -2,33 +2,49 @@ package uk.gov.hmcts.reform.finrem.caseorchestration.helper;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
 import uk.gov.hmcts.reform.bsp.common.model.document.Addressee;
 import uk.gov.hmcts.reform.bsp.common.model.document.CtscContactDetails;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
+import uk.gov.hmcts.reform.finrem.caseorchestration.mapper.FinremCaseDetailsMapper;
+import uk.gov.hmcts.reform.finrem.caseorchestration.mapper.letterdetails.AddresseeGeneratorHelper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.AdditionalHearingDocumentData;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Address;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.AmendedConsentOrderCollection;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.AmendedConsentOrderData;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseDocument;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.ContestedConsentOrderData;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DirectionDetailsCollectionData;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DocumentCollection;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.FinremCaseData;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.FinremCaseDetails;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.GeneralLetterData;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.HearingOrderCollectionData;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.PensionCollectionData;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.PaymentDocument;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.PaymentDocumentCollection;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.PensionType;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.PensionTypeCollection;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Region;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.RespondToOrderData;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.RespondToOrderDocumentCollection;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.TypedCaseDocument;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.YesOrNo;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.wrapper.ContactDetailsWrapper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.document.BulkPrintDocument;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.intervener.IntervenerChangeDetails;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.CaseDataService;
+import uk.gov.hmcts.reform.finrem.caseorchestration.service.GenericDocumentService;
+import uk.gov.hmcts.reform.finrem.caseorchestration.service.StampType;
 
 import java.io.IOException;
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -49,6 +65,10 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.OrchestrationConstant
 import static uk.gov.hmcts.reform.finrem.caseorchestration.OrchestrationConstants.CTSC_TOWN;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.OrchestrationConstants.YES_VALUE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.helper.DocumentHelper.PaperNotificationRecipient.APPLICANT;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.helper.DocumentHelper.PaperNotificationRecipient.INTERVENER_FOUR;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.helper.DocumentHelper.PaperNotificationRecipient.INTERVENER_ONE;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.helper.DocumentHelper.PaperNotificationRecipient.INTERVENER_THREE;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.helper.DocumentHelper.PaperNotificationRecipient.INTERVENER_TWO;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.helper.DocumentHelper.PaperNotificationRecipient.RESPONDENT;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.ADDITIONAL_HEARING_DOCUMENT_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.AMENDED_CONSENT_ORDER_COLLECTION;
@@ -67,9 +87,12 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigCo
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.DIRECTION_DETAILS_COLLECTION_CT;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.FINAL_ORDER_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.FORM_A_COLLECTION;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_LETTER_UPLOADED_DOCUMENT;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_ORDER_LATEST_DOCUMENT;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.HEARING_NOTICES_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.HEARING_ORDER_COLLECTION;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.HEARING_ORDER_OTHER_COLLECTION;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.HIGHCOURT_COURTLIST;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.LATEST_CONSENT_ORDER;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.PENSION_DOCS_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.RESPONDENT_ADDRESS;
@@ -99,6 +122,8 @@ public class DocumentHelper {
 
     private final ObjectMapper objectMapper;
     private final CaseDataService caseDataService;
+    private final GenericDocumentService service;
+    private final FinremCaseDetailsMapper finremCaseDetailsMapper;
 
     public static CtscContactDetails buildCtscContactDetails() {
         return CtscContactDetails.builder()
@@ -140,19 +165,31 @@ public class DocumentHelper {
             .map(this::convertToPensionCollectionDataList)
             .orElse(emptyList())
             .stream()
-            .map(PensionCollectionData::getTypedCaseDocument)
-            .map(TypedCaseDocument::getPensionDocument)
+            .map(PensionTypeCollection::getTypedCaseDocument)
+            .map(PensionType::getPensionDocument)
             .filter(Objects::nonNull)
             .collect(Collectors.toList());
     }
 
+    @Deprecated
     public List<CaseDocument> getFormADocumentsData(Map<String, Object> caseData) {
         return ofNullable(caseData.get(FORM_A_COLLECTION))
-            .map(this::convertToPensionCollectionDataList)
+            .map(this::convertToPaymentDocumentCollectionList)
             .orElse(emptyList())
             .stream()
-            .map(PensionCollectionData::getTypedCaseDocument)
-            .map(TypedCaseDocument::getPensionDocument)
+            .map(PaymentDocumentCollection::getValue)
+            .map(PaymentDocument::getUploadedDocument)
+            .filter(Objects::nonNull)
+            .collect(Collectors.toList());
+    }
+
+    public List<CaseDocument> getFormADocumentsData(FinremCaseData caseData) {
+        return ofNullable(caseData.getCopyOfPaperFormA())
+            .map(this::convertToPaymentDocumentCollectionList)
+            .orElse(emptyList())
+            .stream()
+            .map(PaymentDocumentCollection::getValue)
+            .map(PaymentDocument::getUploadedDocument)
             .filter(Objects::nonNull)
             .collect(Collectors.toList());
     }
@@ -162,8 +199,8 @@ public class DocumentHelper {
             .map(this::convertToPensionCollectionDataList)
             .orElse(emptyList())
             .stream()
-            .map(PensionCollectionData::getTypedCaseDocument)
-            .map(TypedCaseDocument::getPensionDocument)
+            .map(PensionTypeCollection::getTypedCaseDocument)
+            .map(PensionType::getPensionDocument)
             .filter(Objects::nonNull)
             .collect(Collectors.toList());
     }
@@ -200,10 +237,17 @@ public class DocumentHelper {
         });
     }
 
-    private List<PensionCollectionData> convertToPensionCollectionDataList(Object object) {
+    private List<PensionTypeCollection> convertToPensionCollectionDataList(Object object) {
         return objectMapper.convertValue(object, new TypeReference<>() {
         });
     }
+
+
+    private List<PaymentDocumentCollection> convertToPaymentDocumentCollectionList(Object object) {
+        return objectMapper.convertValue(object, new TypeReference<>() {
+        });
+    }
+
 
     public List<String> convertToList(Object object) {
         return objectMapper.convertValue(object, new TypeReference<>() {
@@ -220,6 +264,15 @@ public class DocumentHelper {
         });
     }
 
+    public CaseDocument getGeneralLetterUploadedDocument(Map<String, Object> caseData) {
+        if (isNull(caseData.get(GENERAL_LETTER_UPLOADED_DOCUMENT))) {
+            log.info("General letter uploaded document is not present for case");
+            return null;
+        }
+
+        return convertToCaseDocument(caseData.get(GENERAL_LETTER_UPLOADED_DOCUMENT));
+    }
+
     public List<DirectionDetailsCollectionData> convertToDirectionDetailsCollectionData(Object object) {
         return objectMapper.convertValue(object, new TypeReference<>() {
         });
@@ -227,6 +280,11 @@ public class DocumentHelper {
 
     public List<AdditionalHearingDocumentData> convertToAdditionalHearingDocumentData(Object object) {
         return objectMapper.convertValue(object, new TypeReference<>() {
+        });
+    }
+
+    public List<PensionTypeCollection> getPensionDocuments(Map<String, Object> caseData) {
+        return objectMapper.convertValue(caseData.get(PENSION_DOCS_COLLECTION), new TypeReference<>() {
         });
     }
 
@@ -272,7 +330,7 @@ public class DocumentHelper {
         return Optional.empty();
     }
 
-
+    @Deprecated
     public CaseDetails prepareLetterTemplateData(CaseDetails caseDetails, PaperNotificationRecipient recipient) {
         // need to create a deep copy of CaseDetails.data, the copy is modified and sent later to Docmosis
         CaseDetails caseDetailsCopy = deepCopy(caseDetails, CaseDetails.class);
@@ -306,6 +364,38 @@ public class DocumentHelper {
         return prepareLetterTemplateData(caseDetailsCopy, reference, addresseeName, addressToSendTo, isConsentedApplication);
     }
 
+
+    public CaseDetails prepareLetterTemplateData(FinremCaseDetails caseDetails, PaperNotificationRecipient recipient) {
+        FinremCaseData caseData = caseDetails.getData();
+        Long caseId = caseDetails.getId();
+
+        String reference = "";
+        String addresseeName;
+        Address addressToSendTo;
+
+        if (recipient == APPLICANT && caseData.isApplicantRepresentedByASolicitor()) {
+            log.info("Applicant is represented by a solicitor on case {}", caseId);
+            reference = nullToEmpty((caseData.getContactDetailsWrapper().getSolicitorReference()));
+            addresseeName = nullToEmpty(caseData.getAppSolicitorName());
+            addressToSendTo = caseData.getAppSolicitorAddress();
+        } else if (recipient == RESPONDENT && caseData.isRespondentRepresentedByASolicitor()) {
+            log.info("Respondent is represented by a solicitor on case {}", caseId);
+            reference = nullToEmpty((caseData.getContactDetailsWrapper().getRespondentSolicitorReference()));
+            addresseeName = nullToEmpty((caseData.getRespondentSolicitorName()));
+            addressToSendTo = caseData.getContactDetailsWrapper().getRespondentSolicitorAddress();
+        } else {
+            log.info("{} is not represented by a solicitor on case {}", recipient, caseId);
+            addresseeName = recipient == APPLICANT
+                ? caseDetails.getData().getFullApplicantName()
+                : caseDetails.getData().getRespondentFullName();
+            addressToSendTo = recipient == APPLICANT ? caseData.getContactDetailsWrapper().getApplicantAddress() :
+                caseData.getContactDetailsWrapper().getRespondentAddress();
+        }
+
+        return prepareLetterTemplateData(caseDetails, reference, addresseeName, addressToSendTo);
+    }
+
+    @Deprecated
     private CaseDetails prepareLetterTemplateData(CaseDetails caseDetailsCopy, String reference, String addresseeName,
                                                   Map addressToSendTo,
                                                   boolean isConsentedApplication) {
@@ -338,6 +428,90 @@ public class DocumentHelper {
         return caseDetailsCopy;
     }
 
+
+    private CaseDetails prepareLetterTemplateData(FinremCaseDetails finremCaseDetails, String reference, String addresseeName,
+                                                  Address addressToSendTo) {
+        Long caseId = finremCaseDetails.getId();
+        CaseDetails caseDetails = finremCaseDetailsMapper.mapToCaseDetails(finremCaseDetails);
+        Map<String, Object> caseData = caseDetails.getData();
+        String ccdNumber = nullToEmpty((finremCaseDetails.getId()));
+        String applicantName = finremCaseDetails.getData().getFullApplicantName();
+        String respondentName = finremCaseDetails.getData().getRespondentFullName();
+
+        if (addressLineOneAndPostCodeAreBothNotEmpty(addressToSendTo)) {
+            Addressee addressee = Addressee.builder()
+                .name(addresseeName)
+                .formattedAddress(AddresseeGeneratorHelper.formatAddressForLetterPrinting(addressToSendTo))
+                .build();
+
+            caseData.put(CASE_NUMBER, ccdNumber);
+            caseData.put("reference", reference);
+            caseData.put(ADDRESSEE, addressee);
+            caseData.put("letterDate", String.valueOf(LocalDate.now()));
+            caseData.put("applicantName", applicantName);
+            caseData.put("respondentName", respondentName);
+            caseData.put(CTSC_CONTACT_DETAILS, buildCtscContactDetails());
+            caseData.put("courtDetails", buildFrcCourtDetails(finremCaseDetails.getData()));
+        } else {
+            log.info("Failed to prepare template data as not all required address details were present on case {}", caseId);
+            throw new IllegalArgumentException("Mandatory data missing from address when trying to generate document");
+        }
+
+        return caseDetails;
+    }
+
+    public CaseDetails prepareIntervenerLetterTemplateData(FinremCaseDetails caseDetails, PaperNotificationRecipient recipient) {
+        FinremCaseData caseData = caseDetails.getData();
+        long caseId = caseDetails.getId();
+
+        String reference = "";
+        String addresseeName;
+        Address addressToSendTo;
+
+        boolean isIntervenerRepresented = checkIfIntervenerRepresentedBySolicitor(caseData.getCurrentIntervenerChangeDetails());
+
+        if (recipient == INTERVENER_ONE && !isIntervenerRepresented) {
+            log.info("Intervener One is not represented by a solicitor on case {}", caseId);
+            addresseeName = caseData.getCurrentIntervenerChangeDetails().getIntervenerDetails().getIntervenerName();
+            addressToSendTo = caseData.getCurrentIntervenerChangeDetails().getIntervenerDetails().getIntervenerAddress();
+        } else if (recipient == INTERVENER_TWO && !isIntervenerRepresented) {
+            log.info("Intervener Two is not represented by a solicitor on case {}", caseId);
+            addresseeName = caseData.getCurrentIntervenerChangeDetails().getIntervenerDetails().getIntervenerName();
+            addressToSendTo = caseData.getCurrentIntervenerChangeDetails().getIntervenerDetails().getIntervenerAddress();
+        } else if (recipient == INTERVENER_THREE && !isIntervenerRepresented) {
+            log.info("Intervener Three is not represented by a solicitor on case {}", caseId);
+            addresseeName = caseData.getCurrentIntervenerChangeDetails().getIntervenerDetails().getIntervenerName();
+            addressToSendTo = caseData.getCurrentIntervenerChangeDetails().getIntervenerDetails().getIntervenerAddress();
+        } else if (recipient == INTERVENER_FOUR && !isIntervenerRepresented) {
+            log.info("Intervener Four is not represented by a solicitor on case {}", caseId);
+            addresseeName = caseData.getCurrentIntervenerChangeDetails().getIntervenerDetails().getIntervenerName();
+            addressToSendTo = caseData.getCurrentIntervenerChangeDetails().getIntervenerDetails().getIntervenerAddress();
+        } else {
+            log.info("{} is not represented by a digital solicitor on case {}", recipient, caseId);
+            ContactDetailsWrapper wrapper = caseData.getContactDetailsWrapper();
+            addresseeName = recipient == APPLICANT
+                ? caseDetails.getData().getFullApplicantName()
+                : caseDetails.getData().getRespondentFullName();
+            addressToSendTo = recipient == APPLICANT ? getApplicantCorrespondenceAddress(wrapper) :
+                getRespondentCorrespondenceAddress(wrapper);
+            if (recipient == APPLICANT && caseData.isApplicantRepresentedByASolicitor()) {
+                reference = caseData.getContactDetailsWrapper().getSolicitorReference();
+            }
+            if (recipient == RESPONDENT && caseData.isRespondentRepresentedByASolicitor()) {
+                reference = caseData.getContactDetailsWrapper().getRespondentSolicitorReference();
+            }
+        }
+
+        return prepareLetterTemplateData(caseDetails, reference, addresseeName, addressToSendTo);
+    }
+
+    private boolean addressLineOneAndPostCodeAreBothNotEmpty(Address address) {
+        return ObjectUtils.isNotEmpty(address)
+            && StringUtils.isNotEmpty(address.getAddressLine1())
+            && StringUtils.isNotEmpty(address.getPostCode());
+    }
+
+
     public <T> T deepCopy(T object, Class<T> objectClass) {
         try {
             return objectMapper.readValue(objectMapper.writeValueAsString(object), objectClass);
@@ -348,7 +522,7 @@ public class DocumentHelper {
 
     public String formatAddressForLetterPrinting(Map<String, Object> address) {
         if (address != null) {
-            return Stream.of("AddressLine1", "AddressLine2", "County", "PostTown", "PostCode")
+            return Stream.of("AddressLine1", "AddressLine2", "AddressLine3", "County", "PostTown", "PostCode")
                 .map(address::get)
                 .filter(Objects::nonNull)
                 .map(Object::toString)
@@ -370,19 +544,44 @@ public class DocumentHelper {
             .map(caseDocument -> BulkPrintDocument.builder().binaryFileUrl(caseDocument.getDocumentBinaryUrl())
                 .fileName(caseDocument.getDocumentFilename())
                 .build())
-            .toList();
+            .collect(Collectors.toList());
     }
 
     public Optional<BulkPrintDocument> getDocumentLinkAsBulkPrintDocument(Map<String, Object> data, String documentName) {
         CaseDocument caseDocument = nullCheckAndConvertToCaseDocument(data.get(documentName));
         return caseDocument != null
             ? Optional.of(BulkPrintDocument.builder().binaryFileUrl(caseDocument.getDocumentBinaryUrl())
-                .fileName(caseDocument.getDocumentFilename()).build())
+            .fileName(caseDocument.getDocumentFilename()).build())
             : Optional.empty();
     }
 
-    public List<BulkPrintDocument> getCollectionOfDocumentLinksAsBulkPrintDocuments(Map<String, Object> data, String collectionName) {
-        return getCaseDocumentsAsBulkPrintDocuments(getDocumentLinksFromCustomCollectionAsCaseDocuments(data, collectionName, null));
+    public List<BulkPrintDocument> getHearingDocumentsAsBulkPrintDocuments(Map<String, Object> data,
+                                                                           String authorisationToken,
+                                                                           String caseId) {
+
+        List<BulkPrintDocument> bulkPrintDocuments = new ArrayList<>();
+        List<DocumentCollection> pdfDocuments = new ArrayList<>();
+        List<DocumentCollection> documentCollections = covertDocumentCollections(data.get(HEARING_ORDER_OTHER_COLLECTION));
+        documentCollections.forEach(doc -> {
+            CaseDocument caseDocument = doc.getValue();
+            CaseDocument pdfDocument = service.convertDocumentIfNotPdfAlready(caseDocument, authorisationToken, caseId);
+            pdfDocuments.add(DocumentCollection
+                .builder()
+                .value(pdfDocument)
+                .build());
+            bulkPrintDocuments.add(getCaseDocumentAsBulkPrintDocument(pdfDocument));
+        });
+
+        data.put(HEARING_ORDER_OTHER_COLLECTION, pdfDocuments);
+        return bulkPrintDocuments;
+    }
+
+    private List<DocumentCollection> covertDocumentCollections(Object object) {
+        if (object == null) {
+            return Collections.emptyList();
+        }
+        return objectMapper.registerModule(new JavaTimeModule()).convertValue(object, new TypeReference<>() {
+        });
     }
 
     public List<CaseDocument> getDocumentLinksFromCustomCollectionAsCaseDocuments(Map<String, Object> data, String collectionName,
@@ -431,6 +630,18 @@ public class DocumentHelper {
         return caseDataService.buildFullName(caseDetails.getData(), CONTESTED_RESPONDENT_FIRST_MIDDLE_NAME, CONTESTED_RESPONDENT_LAST_NAME);
     }
 
+    private static Address getRespondentCorrespondenceAddress(ContactDetailsWrapper wrapper) {
+        return wrapper.getContestedRespondentRepresented().isYes() ? wrapper.getRespondentSolicitorAddress() : wrapper.getRespondentAddress();
+    }
+
+    private static Address getApplicantCorrespondenceAddress(ContactDetailsWrapper wrapper) {
+        return wrapper.getApplicantRepresented().isYes() ? wrapper.getApplicantSolicitorAddress() : wrapper.getApplicantAddress();
+    }
+
+    private boolean checkIfIntervenerRepresentedBySolicitor(IntervenerChangeDetails intervenerChangeDetails) {
+        return YesOrNo.YES.equals(intervenerChangeDetails.getIntervenerDetails().getIntervenerRepresented());
+    }
+
     public List<ContestedConsentOrderData> convertToContestedConsentOrderData(Object object) {
         return objectMapper.convertValue(object, new TypeReference<>() {
         });
@@ -460,7 +671,8 @@ public class DocumentHelper {
     }
 
     public enum PaperNotificationRecipient {
-        APPLICANT, RESPONDENT, SOLICITOR
+        APPLICANT, RESPONDENT, SOLICITOR, APP_SOLICITOR, RESP_SOLICITOR,
+        INTERVENER_ONE, INTERVENER_TWO, INTERVENER_THREE, INTERVENER_FOUR
     }
 
     public CaseDocument nullCheckAndConvertToCaseDocument(Object object) {
@@ -468,5 +680,22 @@ public class DocumentHelper {
             return objectMapper.convertValue(object, CaseDocument.class);
         }
         return null;
+    }
+
+    public boolean isHighCourtSelected(Map<String, Object> caseData) {
+        return caseData != null && caseData.get(HIGHCOURT_COURTLIST) != null;
+    }
+
+    public boolean isHighCourtSelected(FinremCaseData caseData) {
+        Region region = caseData.getRegionWrapper().getDefaultRegionWrapper().getRegionList();
+        return Region.HIGHCOURT.equals(region);
+    }
+
+    public StampType getStampType(Map<String, Object> caseData) {
+        return isHighCourtSelected(caseData) ? StampType.HIGH_COURT_STAMP : StampType.FAMILY_COURT_STAMP;
+    }
+
+    public StampType getStampType(FinremCaseData caseData) {
+        return isHighCourtSelected(caseData) ? StampType.HIGH_COURT_STAMP : StampType.FAMILY_COURT_STAMP;
     }
 }
